add: recursive populate of default front matter for existing files

--- a/public/alineacion/index.html
+++ b/public/alineacion/index.html
@@ -11,15 +11,15 @@
 <link rel="mask-icon" href="/favicon/safari-pinned-tab.svg" color="#5bbad5">
 <meta name="msapplication-TileColor" content="#da532c">
 <meta name="theme-color" content="#ffffff">
-<title itemprop="name">  | Maestro Taquero 
+<title itemprop="name"> Alineacion | Maestro Taquero 
 </title>
-<meta name="description" content="Maestro Taquero  es un concepto que rinde homenaje a las creaciones y aportaciones gastronómicas que hicieron exitosos a nuestros maestros taqueros, reuniendo productos de gran calidad y combinándola con los mejores destilados. " />
-<meta property="og:title" content=" | Maestro Taquero" />
-<meta name="twitter:title" content=" | Maestro Taquero" />
-<meta itemprop="name" content=" | Maestro Taquero" />
-<meta name="application-name" content=" | Maestro Taquero" />
+<meta name="description" content="No hay descripción" />
+<meta property="og:title" content="Alineacion | Maestro Taquero" />
+<meta name="twitter:title" content="Alineacion | Maestro Taquero" />
+<meta itemprop="name" content="Alineacion | Maestro Taquero" />
+<meta name="application-name" content="Alineacion | Maestro Taquero" />
 <meta property="og:description"
-      content="Maestro Taquero  es un concepto que rinde homenaje a las creaciones y aportaciones gastronómicas que hicieron exitosos a nuestros maestros taqueros, reuniendo productos de gran calidad y combinándola con los mejores destilados. " />
+      content="No hay descripción" />
 <meta property="og:site_name" content="Maestro Taquero" />
 <meta property="og:url" content="http://localhost:1313/test/alineacion/" />
 <meta property="og:locale" content="en">
@@ -94,7 +94,7 @@
   <header class="mb-4 bg-primary-600">
     <span class="py-96">
       <h1 class="py-16 text-5xl font-black text-center text-white capitalize">
-        
+        Alineacion
       </h1>
     </span>
   </header>
